--- a/home.html
+++ b/home.html
@@ -48,6 +48,53 @@
 
   <body data-spy="scroll" data-target=".navbar" data-offset="71">
 
+    <!-- SIDEBAR
+    ============================== -->
+    <div class="sidebar">
+      <div class="sidebar__wrapper">
+
+        <div class="sidebar__close js-toggle-sidebar visible-xs">
+          <span class="oi oi-x"></span>
+        </div>
+
+        <div class="sidebar__form form_alt">
+          <form>
+            <div class="form-group">
+              <label class="sr-only" for="login__username">Username</label>
+              <input type="text" class="form-control" id="login__username" placeholder="Username">
+            </div>
+            <div class="form-group">
+              <label class="sr-only" for="login__password">Password</label>
+              <input type="password" class="form-control" id="login__password" placeholder="Password">
+            </div>
+            <button type="submit" class="btn btn-block btn-primary">Sign In</button>
+          </form>
+        </div>
+
+        <h4 class="sidebar__heading">
+          Layouts
+        </h4>
+        <ul class="sidebar__menu">
+          <li><a href="index_agency.html">Agency</a></li>
+          <li><a href="index_app.html">App</a></li>
+          <li><a href="index_sign-up.html">Sign Up</a></li>
+        </ul>
+
+        <h4 class="sidebar__heading">
+          Bonus pages
+        </h4>
+        <ul class="sidebar__menu">
+          <li><a href="sign-in.html">Sign In</a></li>
+          <li><a href="sign-up.html">Sign Up</a></li>
+          <li><a href="coming-soon.html">Coming Soon</a></li>
+        </ul>
+
+        <div class="sidebar__logo">
+          Landitt
+        </div>
+
+      </div>
+    </div>
 
     <!-- WRAPPER
     ============================== -->
@@ -95,6 +142,15 @@
               <li>
                 <a href="https://www.facebook.com/VisibleHandInc/" id="navbar-social__link_facebook" target="_blank">
                   <i class="fa fa-facebook-square navbar-social__link"></i>
+                </a>
+              </li>
+              <li class="hidden-xs">
+                <p class="navbar-text navbar__separator"></p>
+              </li>
+              <li>
+                <a href="#" class="js-toggle-sidebar">
+                  <span class="oi oi-menu hidden-xs"></span>
+                  <span class="visible-xs">Web Login coming soon</span>
                 </a>
               </li>
             </ul>
@@ -806,17 +862,17 @@
         <div class="container">
           <div class="row">
             <div class="col-sm-6">
-              <p>&copy; 2015 VisibleHand. All Rights Reserved. <a href="privacystatement.html" target="_blank">Privacy Policy</a></p>
+              <p>&copy; <script>document.write(new Date().getFullYear())</script> US Patriot App. All Rights Reserved. <a href="privacystatement.html" target="_blank">Privacy Policy</a></p>
             </div>
             <div class="col-sm-6">
               <div class="footer__social">
-                <a href="https://twitter.com/VisibleHandInc" class="footer-social__link footer-social__link_twitter" target="_blank">
+                <a href="#" class="footer-social__link footer-social__link_twitter" target="_blank">
                   <i class="fa fa-twitter"></i>
                 </a>
-                <a href="https://www.linkedin.com/company/visiblehand-inc-?trk=company_logo" class="footer-social__link footer-social__link_linkedin" target="_blank">
+                <a href="#" class="footer-social__link footer-social__link_linkedin" target="_blank">
                   <i class="fa fa-linkedin"></i>
                 </a>
-                <a href="https://www.facebook.com/VisibleHandInc/" class="footer-social__link footer-social__link_facebook" target="_blank">
+                <a href="#" class="footer-social__link footer-social__link_facebook" target="_blank">
                   <i class="fa fa-facebook"></i>
                 </a>
               </div>
