--- a/index_app.html
+++ b/index_app.html
@@ -103,7 +103,9 @@
               <span class="icon-bar"></span>
               <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="#home">Landitt</a>
+            <a href="#home">
+              <img src="img/horizontal-logo.png" class="navbar-brand" alt="visible hand logo" />
+            </a>
           </div>
           <div id="navbar" class="collapse navbar-collapse">
             <ul class="nav navbar-nav navbar-right ">
@@ -152,8 +154,12 @@
               </p>
 
               <!-- Hero buttons -->
-              <a href="#" class="hero__btn hero__btn-app btn btn-lg btn-primary animated fadeInUp delay_2"><i class="fa fa-apple"></i> App Store</a>
-              <a href="#" class="hero__btn hero__btn-app btn btn-lg btn-primary animated fadeInUp delay_2"><i class="fa fa-android"></i> Play Store</a>
+              <a href="#" class="btn animated fadeInUp delay_2">
+                <img src="img/app_store.png" alt="">
+              </a>
+              <a href="#" class="btn animated fadeInUp delay_2">
+                <img src="img/play_store.png" alt="">
+              </a>
 
             </div>
           </div> <!-- / .row -->
