updated hero styles, added privacy policy

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
               <label class="sr-only" for="login__password">Password</label>
               <input type="password" disabled="true" class="form-control" id="login__password" placeholder="Password">
             </div>
-            <button type="submit" disabled="true" class="btn btn-block btn-primary">Sign In</button>
+            <button type="submit" disabled="true" id="sidebar-btn" class="btn btn-block">Sign In</button>
           </form>
         </div>
 
@@ -280,26 +280,6 @@
         </div> <!-- / .container -->
 
       </div> <!-- / .section -->
-
-      <div class="section">
-        <div class="container">
-          <div class="row">
-            <div class="row-same-height">
-              <div class="col-sm-5 col-sm-height col-middle">
-                <h4 class="heading heading_left">Fully responsive</h4>
-                <p class="heading__sub">
-                  Sed erat tortor, bibendum at sem in, malesuada ultricies eros. Integer maximus scelerisque sapien ut porta. Nulla tempor rutrum enim vitae lobortis. Quisque varius, ante in aliquet semper.
-                </p>
-                <a href="#" class="btn btn-default heading__btn">Primary action</a>
-              </div>
-              <div class="col-sm-7 col-sm-height col-middle">
-                <img src="img/showcase.png" alt="..." class="img-responsive">
-              </div>
-            </div> <!-- / .row-same-height -->
-          </div> <!-- / .row -->
-        </div> <!-- / .container -->
-      </div> <!-- / .section -->
-
 
       <!-- PORTFOLIO
       ============================== -->
