some small changes

--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
               <li>
                 <a href="#" class="js-toggle-sidebar">
                   <span class="oi oi-menu hidden-xs"></span>
-                  <span class="visible-xs">Bonus pages</span>
+                  <span class="visible-xs">Web Login</span>
                 </a>
               </li>
             </ul>
