--- a/privacystatement.html
+++ b/privacystatement.html
@@ -61,7 +61,7 @@
               <label class="sr-only" for="login__password">Password</label>
               <input type="password" disabled="true" class="form-control" id="login__password" placeholder="Password">
             </div>
-            <button type="submit" disabled="true" class="btn btn-block btn-primary">Sign In</button>
+            <button type="submit" disabled="true" id="sidebar-btn" class="btn btn-block">Sign In</button>
           </form>
         </div>
 
@@ -121,7 +121,7 @@
               <li>
                 <a href="#" class="js-toggle-sidebar">
                   <span class="oi oi-menu hidden-xs"></span>
-                  <span class="visible-xs">Bonus pages</span>
+                  <span class="visible-xs">Web Login</span>
                 </a>
               </li>
             </ul>
@@ -133,7 +133,7 @@
       ============================== -->
       <div class="hero hero_app2">
 
-        
+
       </div> <!-- / .hero -->
 
 
