--- a/demo.html
+++ b/demo.html
@@ -7,7 +7,7 @@
 	<link href='http://fonts.googleapis.com/css?family=PT+Sans:400,700|Bitter' rel='stylesheet' type='text/css'>
 
 	<link rel="stylesheet" href="css/reset.css"> <!-- CSS reset -->
-	<link rel="stylesheet" href="css/demo.css"> <!-- Resource style -->
+	<link rel="stylesheet" href="css/style.css"> <!-- Resource style -->
 	<script src="js/modernizr.js"></script> <!-- Modernizr -->
 
 	<title>3D Animated Mockup | CodyHouse</title>
@@ -15,11 +15,22 @@
 <body>
 	<section class="cd-product">
 		<div class="cd-product-intro">
-			<h1>3D Animated Mockup</h1>
-			<p>Click on the Start button to launch the animation.<br>Then click on the points of interest to discover app features.</p>
+			<h1>Demo the US Patriot App</h1>
+			<p>Click on the start button to launch the demo.<br>Then click on the points of interest to discover app features.</p>
 			<div class="cd-triggers">
-				<a href="http://codyhouse.co/?p=418" class="cd-btn">Download</a>
+				<a href="./index.html" class="cd-btn">Go Back</a>
 				<a href="#cd-product-tour" id="cd-start" class="cd-btn">Start</a>
+			</div>
+			<br>
+			<h3>Want to see more? Download the US Patriot App from the App and Play stores now.</h3>
+			<br>
+			<div class="cd-triggers">
+				<a href="#" class="btn animated fadeInUp delay_2">
+					<img src="img/app_store.png" alt="">
+				</a>
+				<a href="#" class="btn animated fadeInUp delay_2">
+					<img src="img/play_store.png" alt="">
+				</a>
 			</div>
 		</div> <!-- cd-product-intro -->
 
@@ -29,9 +40,13 @@
 				<li class="cd-single-point">
 					<a class="cd-img-replace" href="#0">More info</a>
 					<div class="cd-more-info cd-left">
-						<h2>Title</h2>
+						<h2>Industries</h2>
 						<p>
-							Lorem ipsum dolor sit amet, consectetur adipisicing elit. Molestiae distinctio esse placeat minus fugit, voluptate, quos, ea, nisi temporibus repudiandae perspiciatis natus quasi ipsa corrupti ipsum amet facere ut nihil.
+							Lists in descending order the top campaign contributors by industry in the last election cycle.
+						</p>
+						<br>
+						<p>
+							Non-partisan source: <a href="https://www.opensecrets.org/">Center for Responsive Politics</a>
 						</p>
 						<a href="#0" class="cd-close-info cd-img-replace">Close</a>
 					</div>
@@ -40,9 +55,9 @@
 				<li class="cd-single-point">
 					<a class="cd-img-replace" href="#0">More info</a>
 					<div class="cd-more-info cd-left">
-						<h2>Title</h2>
+						<h2>Contact</h2>
 						<p>
-							Lorem ipsum dolor sit amet, consectetur adipisicing elit. Molestiae distinctio esse placeat minus fugit, voluptate, quos, ea, nisi temporibus repudiandae perspiciatis natus quasi ipsa corrupti ipsum amet facere ut nihil.
+							Quickly contact your representative or visit their official website.
 						</p>
 						<a href="#0" class="cd-close-info cd-img-replace">Close</a>
 					</div>
@@ -51,9 +66,43 @@
 				<li class="cd-single-point">
 					<a class="cd-img-replace" href="#0">More info</a>
 					<div class="cd-more-info cd-right">
-						<h2>Title</h2>
+						<h2>Contributors</h2>
 						<p>
-							Lorem ipsum dolor sit amet, consectetur adipisicing elit. Molestiae distinctio esse placeat minus fugit, voluptate, quos, ea, nisi temporibus repudiandae perspiciatis natus quasi ipsa corrupti ipsum amet facere ut nihil.
+							Lists in descending order the top campaign contributors by entity (individual and PAC combined) in the last election cycle.
+						</p>
+						<br>
+						<p>
+							Non-partisan source: <a href="https://www.opensecrets.org/">Center for Responsive Politics</a>
+						</p>
+						<a href="#0" class="cd-close-info cd-img-replace">Close</a>
+					</div>
+				</li> <!-- .cd-single-point -->
+
+				<li class="cd-single-point">
+					<a class="cd-img-replace" href="#0">More info</a>
+					<div class="cd-more-info cd-left">
+						<h2>Recent Legislation</h2>
+						<p>
+							The 20 bills most recently introduced or updated by your representative.
+						</p>
+						<br>
+						<p>
+							Non-partisan source: <a href="https://www.propublica.org/">ProPublica</a>
+						</p>
+						<a href="#0" class="cd-close-info cd-img-replace">Close</a>
+					</div>
+				</li> <!-- .cd-single-point -->
+
+				<li class="cd-single-point">
+					<a class="cd-img-replace" href="#0">More info</a>
+					<div class="cd-more-info cd-right">
+						<h2>Recent Votes</h2>
+						<p>
+							The most recent vote positions by your representative.
+						</p>
+						<br>
+						<p>
+							Non-partisan source: <a href="https://www.propublica.org/">ProPublica</a>
 						</p>
 						<a href="#0" class="cd-close-info cd-img-replace">Close</a>
 					</div>
