--- a/index.html
+++ b/index.html
@@ -303,96 +303,187 @@
       </div> <!-- / .section -->
 
 
-       <!-- PORTFOLIO
-       ============================== -->
-      <div class="section section_portfolio" id="portfolio">
-        <div class="container">
-          <div class="row">
-            <div class="col-xs-12">
-              <h4 class="heading">Features</h4>
-              <p class="heading__sub">
-              </p>
-            </div>
-          </div> <!-- / .row -->
-        </div> <!-- / .container -->
+      <!-- PORTFOLIO
+            ============================== -->
+            <div class="section" id="portfolio">
+              <div class="container">
+                <div class="row">
+                  <div class="col-xs-12">
+                    <h4 class="heading">Features</h4>
+                    <p class="heading__sub">
+                      Curabitur feugiat risus eu lorem gravida elementum. Etiam mollis faucibus odio eu viverra.<br /> Nulla eu ligula ac lacus porttitor aliquam in sit amet orci.
+                    </p>
+                  </div>
+                </div> <!-- / .row -->
+              </div> <!-- / .container -->
 
-        <div class="portfolio__items">
+              <div class="portfolio__items">
 
-          <div class="col-xs-6 col-lg-3">
-            <div class="portfolio__item">
-              <div class="portfolio-item__img">
-                <a href="img/screen1.png" data-lightbox="portfolio">
-                  <img src="img/screen1.png" class="img-responsive btn-block" alt="...">
-                  <div class="portfolio-item__mask">
-                    <div class="portfolio-item-mask__content">
-                      <div class="portfolio-item-mask__title">
-Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.                      </div>
-                    </div> <!-- / .portfolio-item-mask__content -->
-                  </div> <!-- / .portfolio-item__mask -->
-                </a>
-              </div> <!-- / .portfolio-item__img -->
-            </div> <!-- / .portfolio__item -->
-          </div>
+                <div class="col-xs-6 col-sm-4 col-md-3 col-lg-2 col-lg-offset-2">
+                  <div class="portfolio__item">
+                    <div class="portfolio-item__img">
+                      <a href="img/screen1.png" data-lightbox="portfolio">
+                        <img src="img/screen1.png" class="img-responsive" alt="...">
+                        <div class="portfolio-item__mask">
+                          <div class="portfolio-item-mask__content">
+                            <div class="portfolio-item-mask__title">
+                              In cursus diam at ante consectetur
+                            </div>
+                            <div class="portfolio-item-mask__summary">
+                              Pellentesque metus arcu, placerat nec porta in, ultricies id enim. Nullam sit amet viverra sapien, quis aliquet quam.
+                            </div>
+                          </div> <!-- / .portfolio-item-mask__content -->
+                        </div> <!-- / .portfolio-item__mask -->
+                      </a>
+                    </div> <!-- / .portfolio-item__img -->
+                  </div> <!-- / .portfolio__item -->
+                </div>
 
-          <div class="col-xs-6 col-lg-3">
-            <div class="portfolio__item">
-              <div class="portfolio-item__img">
-                <a href="img/screen2.png" data-lightbox="portfolio">
-                  <img src="img/screen2.png" class="img-responsive btn-block" alt="...">
-                  <div class="portfolio-item__mask">
-                    <div class="portfolio-item-mask__content">
-                      <div class="portfolio-item-mask__title">
-Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.                      </div>
-                    </div> <!-- / .portfolio-item-mask__content -->
-                  </div> <!-- / .portfolio-item__mask -->
-                </a>
-              </div> <!-- / .portfolio-item__img -->
-            </div> <!-- / .portfolio__item -->
-          </div>
+                <div class="col-xs-6 col-sm-4 col-md-3 col-lg-2">
+                  <div class="portfolio__item">
+                    <div class="portfolio-item__img">
+                      <a href="img/screen2.png" data-lightbox="portfolio">
+                        <img src="img/screen2.png" class="img-responsive" alt="...">
+                        <div class="portfolio-item__mask">
+                          <div class="portfolio-item-mask__content">
+                            <div class="portfolio-item-mask__title">
+                              In cursus diam at ante consectetur
+                            </div>
+                            <div class="portfolio-item-mask__summary">
+                              Pellentesque metus arcu, placerat nec porta in, ultricies id enim. Nullam sit amet viverra sapien, quis aliquet quam.
+                            </div>
+                          </div> <!-- / .portfolio-item-mask__content -->
+                        </div> <!-- / .portfolio-item__mask -->
+                      </a>
+                    </div> <!-- / .portfolio-item__img -->
+                  </div> <!-- / .portfolio__item -->
+                </div>
 
-          <div class="col-xs-6 col-lg-3">
-            <div class="portfolio__item">
-              <div class="portfolio-item__img">
-                <a href="img/screen8.png" data-lightbox="portfolio">
-                  <img src="img/screen8.png" class="img-responsive btn-block" alt="...">
-                  <div class="portfolio-item__mask">
-                    <div class="portfolio-item-mask__content">
-                      <div class="portfolio-item-mask__title">
-Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.                      </div>
-                    </div> <!-- / .portfolio-item-mask__content -->
-                  </div> <!-- / .portfolio-item__mask -->
-                </a>
-              </div> <!-- / .portfolio-item__img -->
-            </div> <!-- / .portfolio__item -->
-          </div>
+                <div class="col-xs-6 col-sm-4 col-md-3 col-lg-2">
+                  <div class="portfolio__item">
+                    <div class="portfolio-item__img">
+                      <a href="img/screen3.png" data-lightbox="portfolio">
+                        <img src="img/screen3.png" class="img-responsive" alt="...">
+                        <div class="portfolio-item__mask">
+                          <div class="portfolio-item-mask__content">
+                            <div class="portfolio-item-mask__title">
+                              In cursus diam at ante consectetur
+                            </div>
+                            <div class="portfolio-item-mask__summary">
+                              Pellentesque metus arcu, placerat nec porta in, ultricies id enim. Nullam sit amet viverra sapien, quis aliquet quam.
+                            </div>
+                          </div> <!-- / .portfolio-item-mask__content -->
+                        </div> <!-- / .portfolio-item__mask -->
+                      </a>
+                    </div> <!-- / .portfolio-item__img -->
+                  </div> <!-- / .portfolio__item -->
+                </div>
 
-          <div class="col-xs-6 col-lg-3">
-            <div class="portfolio__item">
-              <div class="portfolio-item__img">
-                <a href="img/screen9.png" data-lightbox="portfolio">
-                  <img src="img/screen9.png" class="img-responsive btn-block" alt="...">
-                  <div class="portfolio-item__mask">
-                    <div class="portfolio-item-mask__content">
-                      <div class="portfolio-item-mask__title">
-Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.                      </div>
-                    </div> <!-- / .portfolio-item-mask__content -->
-                  </div> <!-- / .portfolio-item__mask -->
-                </a>
-              </div> <!-- / .portfolio-item__img -->
-            </div> <!-- / .portfolio__item -->
-          </div>
+                <div class="col-xs-6 col-sm-4 col-md-3 col-lg-2">
+                  <div class="portfolio__item">
+                    <div class="portfolio-item__img">
+                      <a href="img/screen4.png" data-lightbox="portfolio">
+                        <img src="img/screen4.png" class="img-responsive" alt="...">
+                        <div class="portfolio-item__mask">
+                          <div class="portfolio-item-mask__content">
+                            <div class="portfolio-item-mask__title">
+                              In cursus diam at ante consectetur
+                            </div>
+                            <div class="portfolio-item-mask__summary">
+                              Pellentesque metus arcu, placerat nec porta in, ultricies id enim. Nullam sit amet viverra sapien, quis aliquet quam.
+                            </div>
+                          </div> <!-- / .portfolio-item-mask__content -->
+                        </div> <!-- / .portfolio-item__mask -->
+                      </a>
+                    </div> <!-- / .portfolio-item__img -->
+                  </div> <!-- / .portfolio__item -->
+                </div>
 
-          <div class="clearfix"></div>
+                <div class="col-xs-6 col-sm-4 col-md-3 col-lg-2 col-lg-offset-2">
+                  <div class="portfolio__item">
+                    <div class="portfolio-item__img">
+                      <a href="img/screen5.png" data-lightbox="portfolio">
+                        <img src="img/screen5.png" class="img-responsive" alt="...">
+                        <div class="portfolio-item__mask">
+                          <div class="portfolio-item-mask__content">
+                            <div class="portfolio-item-mask__title">
+                              In cursus diam at ante consectetur
+                            </div>
+                            <div class="portfolio-item-mask__summary">
+                              Pellentesque metus arcu, placerat nec porta in, ultricies id enim. Nullam sit amet viverra sapien, quis aliquet quam.
+                            </div>
+                          </div> <!-- / .portfolio-item-mask__content -->
+                        </div> <!-- / .portfolio-item__mask -->
+                      </a>
+                    </div> <!-- / .portfolio-item__img -->
+                  </div> <!-- / .portfolio__item -->
+                </div>
 
-        </div> <!-- / .portfolio__items -->
-        <!-- <div class="row">
-          <div class="col-xs-12 col-sm-8 col-md-6 col-sm-offset-2 col-md-offset-3 text-center">
-            <br>
-              <a href="./demo.html" class="btn btn-lg btn-primary heading__btn wow fadeInUp">I'm Interested</a>
-          </div>
-        </div> -->
+                <div class="col-xs-6 col-sm-4 col-md-3 col-lg-2">
+                  <div class="portfolio__item">
+                    <div class="portfolio-item__img">
+                      <a href="img/screen6.png" data-lightbox="portfolio">
+                        <img src="img/screen6.png" class="img-responsive" alt="...">
+                        <div class="portfolio-item__mask">
+                          <div class="portfolio-item-mask__content">
+                            <div class="portfolio-item-mask__title">
+                              In cursus diam at ante consectetur
+                            </div>
+                            <div class="portfolio-item-mask__summary">
+                              Pellentesque metus arcu, placerat nec porta in, ultricies id enim. Nullam sit amet viverra sapien, quis aliquet quam.
+                            </div>
+                          </div> <!-- / .portfolio-item-mask__content -->
+                        </div> <!-- / .portfolio-item__mask -->
+                      </a>
+                    </div> <!-- / .portfolio-item__img -->
+                  </div> <!-- / .portfolio__item -->
+                </div>
 
-      </div> <!-- / .section -->
+                <div class="col-xs-6 col-sm-4 col-md-3 col-lg-2">
+                  <div class="portfolio__item">
+                    <div class="portfolio-item__img">
+                      <a href="img/screen7.png" data-lightbox="portfolio">
+                        <img src="img/screen7.png" class="img-responsive" alt="...">
+                        <div class="portfolio-item__mask">
+                          <div class="portfolio-item-mask__content">
+                            <div class="portfolio-item-mask__title">
+                              In cursus diam at ante consectetur
+                            </div>
+                            <div class="portfolio-item-mask__summary">
+                              Pellentesque metus arcu, placerat nec porta in, ultricies id enim. Nullam sit amet viverra sapien, quis aliquet quam.
+                            </div>
+                          </div> <!-- / .portfolio-item-mask__content -->
+                        </div> <!-- / .portfolio-item__mask -->
+                      </a>
+                    </div> <!-- / .portfolio-item__img -->
+                  </div> <!-- / .portfolio__item -->
+                </div>
+
+                <div class="col-xs-6 col-sm-4 col-md-3 col-lg-2">
+                  <div class="portfolio__item">
+                    <div class="portfolio-item__img">
+                      <a href="img/screen8.png" data-lightbox="portfolio">
+                        <img src="img/screen8.png" class="img-responsive" alt="...">
+                        <div class="portfolio-item__mask">
+                          <div class="portfolio-item-mask__content">
+                            <div class="portfolio-item-mask__title">
+                              In cursus diam at ante consectetur
+                            </div>
+                            <div class="portfolio-item-mask__summary">
+                              Pellentesque metus arcu, placerat nec porta in, ultricies id enim. Nullam sit amet viverra sapien, quis aliquet quam.
+                            </div>
+                          </div> <!-- / .portfolio-item-mask__content -->
+                        </div> <!-- / .portfolio-item__mask -->
+                      </a>
+                    </div> <!-- / .portfolio-item__img -->
+                  </div> <!-- / .portfolio__item -->
+                </div>
+
+                <div class="clearfix"></div>
+
+              </div> <!-- / .portfolio__items -->
+
+            </div> <!-- / .section -->
 
 
       <!-- PRICING
@@ -424,7 +515,7 @@ Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor 
                 <!-- Wrapper for slides -->
                 <div class="carousel-inner text-center" role="listbox">
                   <div class="item active">
-                    <img src="img/horizontal-logo.png" alt="Colorado Kaiser Medical Group" class="img-responsive btn-block"/>
+                    <img src="img/logo-placeholder.png" alt="Colorado Kaiser Medical Group" class="img-responsive btn-block"/>
                   </div>
                   <div class="item">
                     <img src="img/logo-placeholder.png" alt="Colorado Kaiser Medical Group" class="img-responsive btn-block"/>
