--- a/index.html
+++ b/index.html
@@ -515,13 +515,13 @@
                 <!-- Wrapper for slides -->
                 <div class="carousel-inner text-center" role="listbox">
                   <div class="item active">
-                    <img src="img/logo-placeholder.png" alt="Colorado Kaiser Medical Group" class="img-responsive btn-block"/>
+                    <img src="img/logo-placeholder.png" alt="logo-placeholder" class="img-responsive btn-block"/>
                   </div>
                   <div class="item">
-                    <img src="img/logo-placeholder.png" alt="Colorado Kaiser Medical Group" class="img-responsive btn-block"/>
+                    <img src="img/logo-placeholder.png" alt="logo-placeholder" class="img-responsive btn-block"/>
                   </div>
                   <div class="item">
-                    <img src="img/logo-placeholder.png" alt="Colorado Kaiser Medical Group" class="img-responsive btn-block"/>
+                    <img src="img/logo-placeholder.png" alt="logo-placeholder" class="img-responsive btn-block"/>
                   </div>
                 </div>
 
