--- a/privacystatement.html
+++ b/privacystatement.html
@@ -109,11 +109,10 @@
           </div>
           <div id="navbar" class="collapse navbar-collapse">
             <ul class="nav navbar-nav navbar-right ">
-              <li class="active"><a href="#home">Home</a></li>
+              <li class="active"><a href="index.html">Home</a></li>
               <li><a href="index.html#about">About</a></li>
-              <li><a href="index.html#portfolio">Portfolio</a></li>
-              <li><a href="index.html#team">Team</a></li>
-              <li><a href="index.html#skills">Skills</a></li>
+              <li><a href="demo.html">Demo</a></li>
+              <li><a href="index.html#portfolio">Features</a></li>
               <li><a href="index.html#contact">Contact Us</a></li>
               <li class="hidden-xs">
                 <p class="navbar-text navbar__separator"></p>
